--- a/content/authors.yaml
+++ b/content/authors.yaml
@@ -1,1 +1,21 @@
-[]
+
+  - id: "ca27-f7c7-895d"
+    web:
+      metaDescription: ""
+      metaTitle: "John Doe"
+      metaLinkText: "John Doe"
+      metaKeywords: null
+      pathPart: "john-doe"
+      path: "/blog/authors-page/john-doe/"
+      sitemapPriority: -1
+      canonicalTagMode: 1
+      canonicalQueryParamWhitelist: null
+      canonicalTagCustomValue: null
+      parent: "/blog/authors-page/"
+    meta:
+      sort: 115
+      listed: true
+    data:
+      authors_email: "example@noreply.com"
+      authors_image: "https://rndhrw0l.media.zestyio.com/dev-1.jpg"
+      authors_name: "John Doe"
