--- a/content/articles.yaml
+++ b/content/articles.yaml
@@ -1,5 +1,30 @@
 
-  - id: "6268-4a5f-e547"
+  - id: "d29f-196b-bd72"
+    web:
+      metaDescription: "test"
+      metaTitle: "Sample Blog"
+      metaLinkText: "Sample Blog"
+      metaKeywords: null
+      pathPart: "sample-blog"
+      path: "/blog/sample-blog/"
+      sitemapPriority: -1
+      canonicalTagMode: 1
+      canonicalQueryParamWhitelist: null
+      canonicalTagCustomValue: null
+      parent: "/blog/"
+    meta:
+      sort: 119
+      listed: true
+    data:
+      article_category: null
+      article_content: "<p>test</p>"
+      article_feature_image: "https://rndhrw0l.media.zestyio.com/test.jpg"
+      article_sub_title: "test"
+      article_tags: null
+      article_title: "Sample Blog"
+      author: null
+      date: null
+  - id: "d2c4-a033-26c6"
     web:
       metaDescription: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere odio leo. Maecenas in fermentum lorem, sit amet dapibus tellus. Aliquam erat volutpat. "
       metaTitle: "My First Blog"
@@ -16,17 +41,15 @@
       sort: 116
       listed: true
     data:
-      article_category: "6ee1-c2ed-6993"
+      article_category: "5149-36c3-5b09"
       article_content: "<p><span style=\"display:block;text-align:justify\">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere odio leo. Maecenas in fermentum lorem, sit amet dapibus tellus. Aliquam erat volutpat. Vestibulum sed arcu sit amet diam sagittis tincidunt congue et elit. Integer convallis eget leo vehicula hendrerit. Vivamus convallis vehicula dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque in bibendum mauris.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Curabitur aliquet lorem ac arcu laoreet mattis. Integer ex ante, elementum non pharetra ut, pulvinar sit amet enim. Duis et scelerisque risus. Quisque egestas iaculis risus, at venenatis elit condimentum interdum. Mauris ac velit a eros egestas tempor sit amet non diam. Curabitur nec nisl ante. Vivamus venenatis ligula quis tellus gravida, nec ultrices sapien porta. Quisque et purus non ligula faucibus ultricies id ac eros. Sed venenatis condimentum ante vel mattis. In justo quam, aliquet ac hendrerit nec, accumsan et nibh. Sed gravida, risus ac auctor suscipit, mauris nibh vehicula purus, sed cursus ex massa eget augue. Vivamus pulvinar dui convallis, porttitor risus vel, elementum leo. Vivamus rhoncus, elit sed gravida accumsan, mi leo mattis tellus, in interdum justo lectus eget ipsum. Donec volutpat faucibus felis, id ultricies ante viverra at. Cras et risus arcu.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Sed hendrerit vulputate nisi id mattis. Donec dignissim, magna nec fringilla fringilla, dolor justo vestibulum ligula, vitae interdum erat augue eu tortor. Phasellus ante enim, pretium sit amet imperdiet sed, lobortis eu arcu. Integer scelerisque metus a imperdiet suscipit. In consectetur arcu eros, quis consectetur lectus finibus at. Aenean felis orci, vehicula eu ullamcorper sit amet, molestie sed nisi. Aenean facilisis lacinia eros at pulvinar. Integer molestie dui et pharetra interdum.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Proin viverra, tortor ac porta euismod, nisl dolor porttitor odio, eget pharetra massa metus nec neque. Aliquam nec turpis ut odio tempus tincidunt. Ut at efficitur velit. Aliquam lacus massa, varius ut ex eu, placerat finibus sapien. Praesent tristique eros eget congue pharetra. Praesent sollicitudin tortor quis enim egestas, quis sollicitudin enim vehicula. Aliquam varius odio hendrerit orci sagittis gravida. Nam neque ligula, congue non urna in, mollis feugiat libero. Morbi eu elit id diam aliquet ornare.</span></p>"
       article_feature_image: "https://rndhrw0l.media.zestyio.com/tree-736885__480.jpg"
-      article_images: null
       article_sub_title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. "
-      article_tags: "f2c4-3304-1aa9"
+      article_tags: "eb11-2d06-502d"
       article_title: "My First Blog"
-      author: "ca27-f7c7-895d"
-      caption: "Proin viverra, tortor ac porta euismod, nisl dolor porttitor odio, eget pharetra massa metus nec neque. Aliquam nec turpis ut odio tempus tincidunt. Ut at efficitur velit. Aliquam lacus massa, varius ut ex eu, placerat finibus sapien. Praesent tristique eros eget congue pharetra."
+      author: "b24a-a743-c718"
       date: "2022-11-02"
-  - id: "0705-5c1d-ad84"
+  - id: "1374-04af-9aec"
     web:
       metaDescription: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere odio leo. Maecenas in fermentum lorem, sit amet dapibus tellus. Aliquam erat volutpat. "
       metaTitle: "Get Started with Zesty IO"
@@ -43,13 +66,11 @@
       sort: 118
       listed: true
     data:
-      article_category: "c1ac-131c-f2f5,6ee1-c2ed-6993"
+      article_category: "e67b-645a-03da,5149-36c3-5b09"
       article_content: "<p><span style=\"display:block;text-align:justify\">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere odio leo. Maecenas in fermentum lorem, sit amet dapibus tellus. Aliquam erat volutpat. Vestibulum sed arcu sit amet diam sagittis tincidunt congue et elit. Integer convallis eget leo vehicula hendrerit. Vivamus convallis vehicula dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque in bibendum mauris.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Curabitur aliquet lorem ac arcu laoreet mattis. Integer ex ante, elementum non pharetra ut, pulvinar sit amet enim. Duis et scelerisque risus. Quisque egestas iaculis risus, at venenatis elit condimentum interdum. Mauris ac velit a eros egestas tempor sit amet non diam. Curabitur nec nisl ante. Vivamus venenatis ligula quis tellus gravida, nec ultrices sapien porta. Quisque et purus non ligula faucibus ultricies id ac eros. Sed venenatis condimentum ante vel mattis. In justo quam, aliquet ac hendrerit nec, accumsan et nibh. Sed gravida, risus ac auctor suscipit, mauris nibh vehicula purus, sed cursus ex massa eget augue. Vivamus pulvinar dui convallis, porttitor risus vel, elementum leo. Vivamus rhoncus, elit sed gravida accumsan, mi leo mattis tellus, in interdum justo lectus eget ipsum. Donec volutpat faucibus felis, id ultricies ante viverra at. Cras et risus arcu.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Sed hendrerit vulputate nisi id mattis. Donec dignissim, magna nec fringilla fringilla, dolor justo vestibulum ligula, vitae interdum erat augue eu tortor. Phasellus ante enim, pretium sit amet imperdiet sed, lobortis eu arcu. Integer scelerisque metus a imperdiet suscipit. In consectetur arcu eros, quis consectetur lectus finibus at. Aenean felis orci, vehicula eu ullamcorper sit amet, molestie sed nisi. Aenean facilisis lacinia eros at pulvinar. Integer molestie dui et pharetra interdum.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Proin viverra, tortor ac porta euismod, nisl dolor porttitor odio, eget pharetra massa metus nec neque. Aliquam nec turpis ut odio tempus tincidunt. Ut at efficitur velit. Aliquam lacus massa, varius ut ex eu, placerat finibus sapien. Praesent tristique eros eget congue pharetra. Praesent sollicitudin tortor quis enim egestas, quis sollicitudin enim vehicula. Aliquam varius odio hendrerit orci sagittis gravida. Nam neque ligula, congue non urna in, mollis feugiat libero. Morbi eu elit id diam aliquet ornare.</span></p>\n<p style=\"margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;\"><span style=\"display:block;text-align:justify\">Nam iaculis neque eu ipsum fermentum feugiat. Vivamus ornare est a fringilla egestas. Proin sollicitudin dolor in sodales porttitor. Sed at ante tempus, efficitur arcu quis, aliquet nisl. Aenean ut elit hendrerit, feugiat ante vitae, rutrum nisi. Donec viverra turpis vel velit fringilla, a posuere neque bibendum. Nam accumsan, orci eget cursus egestas, odio nulla ornare nunc, sed dictum mi sapien at odio. Cras pellentesque ipsum non imperdiet porttitor. Ut fermentum aliquet leo, aliquet tincidunt lectus laoreet non. Nulla id erat ac lacus congue pharetra nec in eros. Donec rutrum nunc ex, quis ultricies lorem cursus non. Pellentesque eu egestas turpis. Sed quis felis volutpat, imperdiet dolor id, facilisis ipsum. Proin posuere ultrices pellentesque. Morbi ullamcorper placerat metus, eget maximus massa tincidunt at.</span></p>"
       article_feature_image: "https://rndhrw0l.media.zestyio.com/Screen-Shot-2021-04-20-at-1.36.51-PM-e1618944355690.png"
-      article_images: null
       article_sub_title: "A complete guide on how to create your website using Zesty.io"
-      article_tags: "f2c4-3304-1aa9"
+      article_tags: "eb11-2d06-502d"
       article_title: "Get Started with Zesty IO"
-      author: "ca27-f7c7-895d"
-      caption: null
+      author: "b24a-a743-c718"
       date: "2022-11-02"
